KULRICE-5637: commons-httpclient has been eol'd. We should use org.apache.httpcomponents:httpclient
./pom.xml:
* removed commons-httpclient from managed dependencies
* bumped the httpcomponents httpclient version to 4.3.3
 
rice-middleware/core-service/impl/pom.xml:
rice-middelware/ksb/client/client-impl/pom.xml:
rice-middleware/it/ksb/pom.xml:
* replaced commons-httpclient dependency with httpcomponents httpclient

HttpInvokerConnectorTest.java:
* new unit test to verify HttpInvokerConnector's clients work with standard and signed/verified authenticated https endpoints

TestClient1.java:
* Enhanced to expose services via https as well, and to register a CredentialsSourceFactory to support the service that requires authentication

TestClient1SpringBeans.xml:
* Added a new HttpInvoker-based test service that has security and credentials enabled

KSBConfigurer.java:
* removed HTTP client configuration block from loadLifecycles()
* removed dead code from doAdditionalContextStoppedLogic()

DefaultHttpClientConfigurer.java:
HttpClientConfigurer.java:
HttpClientParams: Added 
* Built an override-able configuration mechanism for HttpClients that is used by the HttpInvokerConnector

HttpInvokerConnector.java:
* Converted to use HttpComponents HttpClients
* Utilizing DefaultHttpClientConfigurer to set up clients

BusClientFailureProxy.java
* Converted exceptions to HttpComponents equivalents
* Added static methods to enable customization of serviceRemovalExceptions and serviceRemovalResponseCodes

KSBHttpInvokerRequestExecutor.java:
AuthenticationCommonsHttpInvokerRequestExecutor.java:
HttpClientHeaderDigitalSigner.java
* Converted to HttpComponents

KsbServiceBusClientSpringBeans.xml:
* added bean for DefaultHttpClientConfigurer

EasySSLProtocolSocketFactory.java: deleted
EasyX509TrustManager.java: deleted
* dead code

HttpInvokerConnectorConfigurationTest.java: deleted
* this test no longer applied and was redundant